@@ -4,29 +4,28 @@
 #include "rha_types.h"
 #include "glist.h"
 
-extern _rha_ list_t   list_new();
-extern _rha_ list_t   list_copy(list_t l);
-extern _rha_ int_t    list_len(list_t l);
-extern _rha_ void     list_append(list_t, object_t o);
-extern _rha_ void     list_prepend(list_t, object_t o);
-extern _rha_ void     list_extend(list_t, list_t);
+extern _rha_ list_t    list_new();
+extern _rha_ list_t    list_copy(list_t l);
+extern _rha_ int_t     list_len(list_t l);
+extern _rha_ void      list_append(list_t, object_t o);
+extern _rha_ void      list_prepend(list_t, object_t o);
+extern _rha_ void      list_extend(list_t, list_t);
 
-extern _rha_ list_t   list_literal(list_t parsetree);
+extern _rha_ list_t    list_literal(list_t parsetree);
 
-extern _rha_ tuple_t  list_to_tuple(list_t);
+extern _rha_ tuple_t   list_to_tuple(list_t);
 
-extern _rha_ object_t list_first(list_t);
-extern _rha_ object_t list_last(list_t);
+extern _rha_ object_t  list_first(list_t);
+extern _rha_ object_t  list_last(list_t);
 
-extern _rha_ object_t list_popfirst(list_t);
-extern _rha_ object_t list_poplast(list_t);
+extern _rha_ object_t  list_popfirst(list_t);
+extern _rha_ object_t  list_poplast(list_t);
 
 // iterator stuff for use in C with MACRO
-typedef glist_iterator_t list_it;
-extern void list_begin(list_t l, list_it *i);
-extern bool list_done(list_it *i);
-extern void list_next(list_it *i);
-extern object_t list_get(list_it *i);
+extern _rha_ list_it_t list_begin(list_t l);
+extern _rha_ bool_t    list_done(list_it_t i);
+extern _rha_ void      list_next(list_it_t i);
+extern _rha_ object_t  list_get(list_it_t i);
 
 // only for parse.c and prules.c
 extern list_t list_chop_first(list_t l, symbol_t s);
